salesforce/force-app/main/default/objects/Campaign/fields/Channel_Group__c.field-meta.xml
<CustomField>
    <fullName>Channel_Group__c</fullName>
    <description>GA4 channel group (simplified default channel grouping).</description>
    <inlineHelpText>GA4 channel group (simplified default channel grouping).</inlineHelpText>
    <label>Channel Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>