salesforce/force-app/main/default/objects/Campaign/fields/GA4_Campaign_Key__c.field-meta.xml
<CustomField>
    <fullName>GA4_Campaign_Key__c</fullName>
    <description>Channel group and GA4 campaign name, e.g. 'Paid Search|winter_sale'. Used for upserts.</description>
    <externalId>true</externalId>
    <inlineHelpText>Channel group and GA4 campaign name, e.g. 'Paid Search|winter_sale'. Used for upserts.</inlineHelpText>
    <label>GA4 Campaign Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>