salesforce/force-app/main/default/objects/Campaign/fields/GA4_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>GA4_Campaign_Name__c</fullName>
    <description>Campaign name as recorded by GA4. '(obfuscated)' where Google hid the value.</description>
    <inlineHelpText>Campaign name as recorded by GA4. '(obfuscated)' where Google hid the value.</inlineHelpText>
    <label>GA4 Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>