salesforce/force-app/main/default/objects/Campaign/fields/GA4_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>GA4_Conversion_Rate__c</fullName>
    <description>Share of this campaign's sessions that included a purchase.</description>
    <inlineHelpText>Share of this campaign's sessions that included a purchase.</inlineHelpText>
    <label>GA4 Conversion Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>