salesforce/force-app/main/default/objects/Campaign/fields/GA4_Revenue__c.field-meta.xml
<CustomField>
    <fullName>GA4_Revenue__c</fullName>
    <description>Revenue (USD) from orders placed in sessions from this campaign (last touch).</description>
    <inlineHelpText>Revenue (USD) from orders placed in sessions from this campaign (last touch).</inlineHelpText>
    <label>GA4 Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>