salesforce/force-app/main/default/objects/Campaign/fields/GA4_Sessions__c.field-meta.xml
<CustomField>
    <fullName>GA4_Sessions__c</fullName>
    <description>Sessions from this campaign across all GA4 data (not only the sampled people).</description>
    <inlineHelpText>Sessions from this campaign across all GA4 data (not only the sampled people).</inlineHelpText>
    <label>GA4 Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>