salesforce/force-app/main/default/objects/Campaign/fields/GA4_Transactions__c.field-meta.xml
<CustomField>
    <fullName>GA4_Transactions__c</fullName>
    <description>Orders placed in sessions from this campaign (last touch).</description>
    <inlineHelpText>Orders placed in sessions from this campaign (last touch).</inlineHelpText>
    <label>GA4 Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>