salesforce/force-app/main/default/objects/Campaign/fields/GA4_Users__c.field-meta.xml
<CustomField>
    <fullName>GA4_Users__c</fullName>
    <description>Distinct GA4 users with a session from this campaign.</description>
    <inlineHelpText>Distinct GA4 users with a session from this campaign.</inlineHelpText>
    <label>GA4 Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>